# Community-Poll-App

./: README.md  license.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
antpoll/: hooks.py  modules.txt
antpoll/antpoll/custom/: view_log.json
antpoll/antpoll/doctype/community_poll/: community_poll.js  community_poll.json  community_poll.py  test_community_poll.py
antpoll/antpoll/doctype/community_poll_users/: community_poll_users.js  community_poll_users.json  community_poll_users.py  test_community_poll_users.py
antpoll/antpoll/doctype/poll_options/: poll_options.json  poll_options.py
antpoll/antpoll/doctype/poll_question/: poll_question.js  poll_question.json  poll_question.py  test_poll_question.py
antpoll/antpoll/doctype/poll_question_view/: poll_question_view.js  poll_question_view.json  poll_question_view.py  test_poll_question_view.py
antpoll/antpoll/doctype/poll_settings/: poll_settings.js  poll_settings.json  poll_settings.py  test_poll_settings.py
antpoll/antpoll/doctype/poll_vote/: poll_vote.js  poll_vote.json  poll_vote.py  test_poll_vote.py
antpoll/antpoll/doctype/question_items/: question_items.json  question_items.py
antpoll/antpoll/web_form/join_community/: join_community.js  join_community.json
antpoll/antpoll/workspace/poll/: poll.json
antpoll/fixtures/: energy_point_rule.json  role.json  role_profile.json
antpoll/templates/: no_login.html
antpoll/templates/generators/: community_poll.html  community_poll_start.html  polls.html  test.html
