[project]
name = "antpoll"
authors = [
    { name = "avishna", email = "avishna@gmail.com" }
]
description = "Poll App"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "qrcode==8.1"  # Note: Must be inside quotes
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# Add your dev dependencies here, e.g.:
# black = "^23.3.0"
